# test_ws

./: .gitignore  CLAUDE.md  make_coffee.sh  start_coffee.sh  start_testtool.sh
src/coffeeproj_pkg/: CMakeLists.txt  package.xml  readme.md
src/coffeeproj_pkg/doc/: flight_control_sequence.md
src/coffeeproj_pkg/launch/: coffee_proj.launch
src/coffeeproj_pkg/scripts/: coffee_proj_node.py  flight_controller.py  mqtt_client.py  pod_down_node.py  state_machine.py  utils.py  zeroone_rtk.py
src/mavros_test_pkg/: CMakeLists.txt  package.xml
src/mavros_test_pkg/src/: offb_node.cpp
src/server_communicate_pkg/: CMakeLists.txt  package.xml
src/server_communicate_pkg/src/: client.cpp  server.cpp
src/server_communicate_pkg/srv/: AddInts.srv
src/testenv_pkg/: CMakeLists.txt  package.xml
src/testenv_pkg/launch/: testenv_pkg.launch
src/testenv_pkg/src/: test.cpp
src/testtool_pkg/: CMakeLists.txt  package.xml
src/testtool_pkg/launch/: mavros_test.launch
src/testtool_pkg/scripts/: mavros_test_node.py
src/topic_communicate_pkg/: CMakeLists.txt  package.xml
src/topic_communicate_pkg/src/: listener.cpp  publisher.cpp
