<?xml version="1.0"?>
<package format="2">
  <name>coffeeproj_pkg</name>
  <version>1.0.0</version>
  <description>
    Coffee delivery UAV control package.
    MQTT communication, telemetry publishing, task execution, flight control.
  </description>

  <maintainer email="coffee@example.com">Coffee Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>

  <export>
  </export>
</package>